# fintech-risk-intelligence

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  setup_project.py
api/: main.py
app/: streamlit_app.py
models/: logistic_regression.pkl  model_metrics.csv  xgboost_optuna.pkl  xgboost_optuna_best_params.json  xgboost_optuna_best_score.txt
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_baseline_logistic_regression.ipynb  04_random_forest.ipynb  05_xgboost.ipynb  06_optuna_xgboost.ipynb  07_shap_explainability.ipynb
src/: data_loader.py  database.py  init_db.py  modeling.py  preprocessing.py  train_models.py  tuning.py
